--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -309,14 +309,14 @@ jobs:
         with:
           github-token: ${{ secrets.ZOWE_ROBOT_TOKEN }}
           script: |
-            var result = github.rest.pulls.create({
+            const { data: out } = await github.rest.pulls.create({
               owner: '${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}',
               repo: '${{ env.ZOWE_INSTALL_PACKAGING_REPO }}',
               title: 'Automatically Promote PTF for v${{ github.event.inputs.zowe-release-version }} after release by zowe robot',
               head: 'users/robot/promote-ptf-from-${{ github.run_number }}',
               base: 'staging'
             });
-            return result.data.number;
+            return out.data.number;
 
       - name: '[Promote PTF 7 - formal release only!] Show newly created PR'
         if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' && steps.promote-ptf-6.outputs.result != '' }}
@@ -329,7 +329,7 @@ jobs:
         with:
           github-token: ${{ secrets.ZOWE_ROBOT_TOKEN }}
           script: |
-            var result = github.rest.pulls.requestReviewers({
+            github.rest.pulls.requestReviewers({
               owner: '${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}',
               repo: '${{ env.ZOWE_INSTALL_PACKAGING_REPO }}',
               pull_number: ${{ steps.promote-ptf-6.outputs.result }},
