--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -309,7 +309,7 @@ jobs:
         with:
           github-token: ${{ secrets.ZOWE_ROBOT_TOKEN }}
           script: |
-            var out = github.rest.pulls.create({
+            var out = await github.rest.pulls.create({
               owner: '${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}',
               repo: '${{ env.ZOWE_INSTALL_PACKAGING_REPO }}',
               title: 'Automatically Promote PTF for v${{ github.event.inputs.zowe-release-version }} after release by zowe robot',
@@ -317,6 +317,7 @@ jobs:
               base: 'staging'
             });
             console.log(out)
+            console.log(out.data)
             return out.data.number;
           result-encoding: string
 
