--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -309,6 +309,7 @@ jobs:
         with:
           github-token: ${{ secrets.ZOWE_ROBOT_TOKEN }}
           script: |
+            // await means to wait this functions finishes then proceed
             var out = await github.rest.pulls.create({
               owner: '${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}',
               repo: '${{ env.ZOWE_INSTALL_PACKAGING_REPO }}',
@@ -316,16 +317,17 @@ jobs:
               head: 'users/robot/promote-ptf-from-${{ github.run_number }}',
               base: 'staging'
             });
-            console.log(out)
-            console.log(out.data)
-            return out.data.number;
-          result-encoding: string
 
-      # - name: '[Promote PTF 7 - formal release only!] Show newly created PR'
-      #   if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' && steps.promote-ptf-6.outputs.result != '' }}
-      #   run: |
-      #     #echo "The pull request is at: https://github.com/${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}/${{ env.ZOWE_INSTALL_PACKAGING_REPO }}/pull/${{ steps.promote-ptf-6.outputs.result }}"
-      #     echo "The pull request is at: ${{ steps.promote-ptf-6.outputs.result.data.html_url }}"
+            var returnJson = {};
+            returnJson.prnum = out.data.number;
+            returnJson.prurl = out.data.html_url;
+            return returnJson;
+
+      - name: '[Promote PTF 7 - formal release only!] Show newly created PR'
+        if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' && steps.promote-ptf-6.outputs.result != '' }}
+        run: |
+          #echo "The pull request is at: https://github.com/${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}/${{ env.ZOWE_INSTALL_PACKAGING_REPO }}/pull/${{ steps.promote-ptf-6.outputs.result }}"
+          echo "The pull request is at: ${{ steps.promote-ptf-6.outputs.result.prurl }}"
 
       # - name: '[Promote PTF 8 - formal release only!] Add PR reviewers'
       #   if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' && steps.promote-ptf-6.outputs.result != '' }}
