--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -317,29 +317,21 @@ jobs:
               head: 'users/robot/promote-ptf-from-${{ github.run_number }}',
               base: 'staging'
             });
+            console.log('The pull request is at: ${out.data.html_url}');
+            return out.data.number;
+          result-encoding: string
 
-            var returnJson = {};
-            returnJson.prnum = out.data.number;
-            returnJson.prurl = out.data.html_url;
-            return returnJson;
-
-      - name: '[Promote PTF 7 - formal release only!] Show newly created PR'
+      - name: '[Promote PTF 7 - formal release only!] Add PR reviewers'
         if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' && steps.promote-ptf-6.outputs.result != '' }}
-        run: |
-          #echo "The pull request is at: https://github.com/${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}/${{ env.ZOWE_INSTALL_PACKAGING_REPO }}/pull/${{ steps.promote-ptf-6.outputs.result }}"
-          echo "The pull request is at: ${{ steps.promote-ptf-6.outputs.result.prurl }}"
-
-      # - name: '[Promote PTF 8 - formal release only!] Add PR reviewers'
-      #   if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' && steps.promote-ptf-6.outputs.result != '' }}
-      #   uses: actions/github-script@v5
-      #   with:
-      #     github-token: ${{ secrets.ZOWE_ROBOT_TOKEN }}
-      #     script: |
-      #       github.rest.pulls.requestReviewers({
-      #         owner: '${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}',
-      #         repo: '${{ env.ZOWE_INSTALL_PACKAGING_REPO }}',
-      #         pull_number: ${{ steps.promote-ptf-6.outputs.result }},
-      #         reviewers: [
-      #           'jackjia-ibm','FlappiTomic'
-      #         ]
-      #       });
+        uses: actions/github-script@v5
+        with:
+          github-token: ${{ secrets.ZOWE_ROBOT_TOKEN }}
+          script: |
+            github.rest.pulls.requestReviewers({
+              owner: '${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}',
+              repo: '${{ env.ZOWE_INSTALL_PACKAGING_REPO }}',
+              pull_number: ${{ steps.promote-ptf-6.outputs.result }},
+              reviewers: [
+                'jackjia-ibm','FlappiTomic'
+              ]
+            });
