--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -352,7 +352,7 @@ jobs:
           fi
 
           # login first
-          echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USER }}"
+          echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USER }}" --password-stdin
 
           # initialize everything
           manifest_amends=
