--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -15,7 +15,7 @@ jobs:
           workflow-filename: build-packaging.yml
           branch-name: users/tom/repository-dispatch
           poll-frequency: 3
-          inputs-json-string: '{"BUILD_SMPE":"true","BUILD_DOCKER":"true","BUILD_KUBERNETES":"true"}'
+          #inputs-json-string: '{"BUILD_SMPE":"true","BUILD_DOCKER":"true","BUILD_KUBERNETES":"true"}'
         env:
           DEBUG: 'zowe-actions:shared-actions:workflow-remote-call-wait'
 
