update nightly file
Signed-off-by: Tom Zhang <tom.yczhang@gmail.com>

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -15,9 +15,9 @@ jobs:
           workflow-filename: build-packaging.yml
           branch-name: users/tom/repository-dispatch
           poll-frequency: 3
-          #inputs-json-string: '{"BUILD_SMPE":"true","BUILD_DOCKER":"true","BUILD_KUBERNETES":"true"}'
-        env:
-          DEBUG: 'workflow-remote-call-wait'
+          inputs-json-string: '{"BUILD_SMPE":"true","BUILD_DOCKER":"true","BUILD_KUBERNETES":"true"}'
+        # env:
+        #   DEBUG: 'workflow-remote-call-wait'
 
 
   # call-test-workflow:
