change GITHUB_REF to use GITHUB_REF_NAME
Signed-off-by: Tom Zhang <tom.yczhang@gmail.com>

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -6,7 +6,7 @@ jobs:
   run-nightly-pipeline:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Call build workflow'
+      - name: 'Call Build Workflow'
         uses: zowe-actions/shared-actions/workflow-remote-call-wait@main
         with:
           github-token: ${{ secrets.ZOWE_ROBOT_TOKEN }}
